--- a/report.html
+++ b/report.html
@@ -24,19 +24,19 @@
 ['1G', 20],
 ['2G', 273],
 ['3G', 17],
-['4G', 2274],
+['4G', 2277],
 ['5G', 9],
 ['6G', 27],
 ['7G', 0],
-['8G', 2729],
-['9G', 2729],
+['8G', 2735],
+['9G', 3],
 ['10G', 6],
 ['11G', 0],
-['12G', 58],
+['12G', 59],
 ['13G', 4],
 ['14G', 2],
 ['15G', 0],
-['16G', 1193],
+['16G', 1194],
 ['17G', 1],
 ['18G', 0],
 ['19G', 0],
@@ -52,7 +52,7 @@
 ['29G', 0],
 ['30G', 0],
 ['31G', 0],
-['32G', 101],
+['32G', 102],
 ['33G', 0],
 ['34G', 0],
 ['35G', 0],
@@ -153,15 +153,15 @@
       data.addColumn('string','Ram');
       data.addColumn('number','Macs');
       data.addRows([
-['Less than 6 months', 3],
-['6 months old', 1787],
-['1 year old', 1786],
-['2 years old', 933],
+['Less than 6 months', 0],
+['6 months old', 1779],
+['1 year old', 1781],
+['2 years old', 944],
 ['3 years old', 595],
-['4 years old', 569],
-['5 years old', 460],
-['6 years old', 266],
-['7 years old', 122],
+['4 years old', 570],
+['5 years old', 462],
+['6 years old', 267],
+['7 years old', 124],
 ['8 years old', 18],
 ['9 years old', 0],
 ['10 years old', 0],
@@ -169,7 +169,7 @@
 ['12 years old', 0],
 ['13 years old', 0],
 ['14 years old', 0],
-['15 years old', 245],
+['No Date Available', 256],
         ]);
 
         // Set chart options
@@ -204,14 +204,15 @@
       data.addColumn('number','Macs');
       data.addRows([
 ['OS 11 El Capitan', 3],
-['OS 10 Yosemite', 3054],
-['OS 9 Mavericks', 2046],
-['OS 8 Mountain Lion', 838],
-['OS 7 Lion', 578],
+['OS 10 Yosemite', 3071],
+['OS 9 Mavericks', 2045],
+['OS 8 Mountain Lion', 837],
+['OS 7 Lion', 576],
 ['OS 6 Snow Leopard', 204],
-['OS 5 Leopard', 40],
+['OS 5 Leopard', 39],
 ['OS 4 Tiger', 0],
 ['OS 3 Panther', 0],
+['Unknown OS', 21]
         ]);
 
         // Set chart options
@@ -246,12 +247,12 @@
       data.addColumn('number','Macs');
       data.addRows([
 ['Mac Mini', 546],
-['MacBookPro', 2602],
-['MacBookAir', 1638],
+['MacBookPro', 2608],
+['MacBookAir', 1643],
 ['MacBook', 182],
 ['G5', 1],
 ['VMWare', 10],
-['iMac', 1602],
+['iMac', 1603],
         ]);
 
         // Set chart options
